@@ -1,6 +1,6 @@
 Package: sp
-Version: 0.9-44
-Date: 2009-09-17
+Version: 0.9-45
+Date: 2009-09-22
 Title: classes and methods for spatial data
 Author: Edzer J. Pebesma <edzer.pebesma@uni-muenster.de>, Roger Bivand <Roger.Bivand@nhh.no> and others
 Maintainer: Edzer J. Pebesma <edzer.pebesma@uni-muenster.de>
